--- a/app/views/layouts/_headerDashboard.html.erb
+++ b/app/views/layouts/_headerDashboard.html.erb
@@ -18,7 +18,7 @@
 
 
     <ul class="nav navbar-nav">
-          <li><%= link_to "|    Disciplinas",root_path%></li>
+          <li><%= link_to "  |   Listar Disciplinas",root_path%></li>
     </ul>
 
   </div>
