--- a/app/assets/stylesheets/dashboard_student.scss
+++ b/app/assets/stylesheets/dashboard_student.scss
@@ -2,183 +2,72 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-@import url(http://fonts.googleapis.com/css?family=Lora|Ubuntu:300,400,500);
-@import "bootstrap-sprockets";
-@import "bootstrap";
+
+@mixin background-tile2 {
+  box-sizing: border-box;
+  background-color: #600;
+  border-radius: 5px;
+  border-color: #fff;
+  padding: 1.5em 1.25em;
+  box-shadow: 3px 3px 5px 6px #ccc;
+}
 
 @mixin background-tile {
 	box-sizing: border-box;
-	background-color: #fff;
+	background-color: #333;
+	border: solid;
 	border-radius: 5px;
-   box-shadow: 3px 3px 5px 6px #ccc;
-    padding: 1.5em 1.25em;
+	border-color: #fff;
+	border-width: 7px;
+	padding-left: 20px;
+	padding-top: 30px;
+    box-shadow: 4px 4px 4px 4px #ccc;
+
+
 }
 
-
-@mixin background-tile2 {
-	box-sizing: border-box;
-	background-color: transparent;
-	border-radius: 5px;
-	padding: 1.5em 1.25em;
+body{
+  background-color: #EEEEEE;
+  font-family: Lato, Ubuntu;
 }
-
-/* General styles */
-
-body {
-	background-color: #f5f5f5;
-	font-family: 'Lora', serif;
-}
-
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'Ubuntu', sans-serif;
-	font-weight: 300;
-}
-
-p.alert, p.notice {
-	margin: 0;
-}
-
-.col-md-1 {
-
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 68px;
-}
-
-/* Navbar/navigation styles */
 
 .navbar {
-	font-family: 'Ubuntu', sans-serif;
-	font-size: 16px;
-	
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 16px;
+  
 }
 
 
-.navbar-inverse {
-	padding-bottom: 5px;
-	padding-top: 5px;
+
+
+.img-center{
+  margin: 0 auto;
+  margin-top: 240px;
+  float: none;
+  width: 900px;  
+}
+
+.subjects {
+	margin-top: 100px;
+
+}
+
+.subject-box {
 	text-transform: uppercase;
-
-	.navbar-nav > li > a {
-		color: white;
-		&:hover {
-			color: #9CF;
-			transition: 0.4s;
-		}
-	}
-
-	.navbar-header {
-
-		text-transform: none;
-
-
-
-		.navbar-brand {
-			color: white;
-			letter-spacing: 0.6px;
-			font-size: 20px;
-
-			&:hover {
-				color: (#9CF, 69%);
-				transition: 0.4s;
-			}
-		}
-	}
-
-
-	.dropdown-menu > li > a:hover {
-		background-color: darken(#f1c40f, 5%);
-		color: #fff;
-	}
-
-	.navbar-nav > .open > a, .navbar-nav > .open > a:hover, .navbar-nav > .open > a:focus {
-		background-color: darken(#f1c40f, 5%);
-		color: #9CF;
-
-	}
-
-}
-
-
-
-
-.dropdown-menu > .active > a {
-	background-color: #f1c40f;
-	color: #fff;
-
-}
-
-
-/* Button/link styles */
-
-.btn-custom {
-	color: darken(#f1c40f, 5%);
-	background-color: #fff;
-	border: 1px solid darken(#f1c40f, 5%);
-	padding: 8px 20px;
-	border-radius: 5px;
+	height: 100px;
+	width: 700px;
+	margin-top: 25px;
 	font-family: 'Ubuntu', sans-serif;
-	&:hover {
-		text-decoration: none;
-		background-color: darken(#f1c40f, 5%);
-		color: #fff;
-		transition: 0.5s;
-	}
-}
+    font-size: 28px;
+    font-style: bold;
+    color: #fff;
 
-.btn-custom2 {
-	color: #333;
-	background-color: #fff;
-	border: 1px solid #222;
-	padding: 8px 20px;
-	border-radius: 5px;
-	font-family: 'Ubuntu', sans-serif;
-	&:hover {
-		text-decoration: none;
-		background-color: #333;
-		color: #fff;
-		transition: 0.5s;
-	}	
-}
-
-.links {
-
-	.btn-custom {
-		padding: 3px 10px;
-		font-weight: 300;
-	}
-
-}
-
-.book-links {
-
-	.btn-custom {
-		padding: 3px 10px;
-		font-weight: 300;
-		margin-top: 40px;	
-	}
-
-}
-
-
-.imghome {
-	margin: 0 auto;
-	margin-top: 190px;
-	height: 60%;
-	width: 900px;
-	@include background-tile2;
-
-}
-
-
-/* Book styles */
-
-
-
-.book-show {
-	height: 475px;
-	width: 325px;
 	@include background-tile;
+}
+
+.subject-box:hover{
+  background-color: #900 !important;
+  @include background-tile;
 }
 
 .book-info {
@@ -218,122 +107,36 @@ p.alert, p.notice {
 
 }
 
-
-/* current-category styles */
-
-.current-category {
-	margin-bottom: 40px;
+.text-home{
+  margin-top: 10px;
+  font-size: 18pt;
+  text-align: center;
+  color: #AAA;
 }
 
+.textindex2{
+  margin-top: 90px;
+  font-size: 20pt;
+  text-align: center;
+  color: #000000;
+}
 
-/* Reviews styles */
+.textsubject{
+  
+  font-size: 20pt;
+  text-align: center;
+  color: #FFF;
+}
 
-.reviews {
-
-	@include background-tile;
-	margin-top: 40px;
-
-	h1 {
-		margin-top: 0;
-		margin-bottom: 15px;
-		font-size: 2em;
-	}
-
-	.review {
-		border-bottom: 1px solid gainsboro;
-		margin-bottom: 15px;
-		padding-bottom: 10px;
-
-		.review-comment {
-			font-size: 1.05em;
-			line-height: 1.5;
-		}
-
-	}
-
-	.new-review {
-		padding-top: 8px;
-	}
+.btn-info{
+  background-color: #036 !important;
+  border-color: #036 !important;
 
 }
 
-/* New Book Form styles */
-
-.new-book-form {
-	@include background-tile;
-
-	h1 {
-		margin-top: 0;
-	}
-
-	#category_id {
-		margin-bottom: 10px;
-	}
-
-	#book_book_img {
-		margin-bottom: 10px;
-	}
-
-}
-
-
-/* Edit Book Form styles */
-
-.edit-book-form {
-
-	@include background-tile;
-
-	h1 {
-		margin-top: 0;
-	}
-
-	#book_category_id {
-		margin-bottom: 10px;
-	}
-
-	#book_book_img {
-		margin-bottom: 10px;
-	}
-
-}
-
-/* New/Edit review form styles */
-
-.new-review-form, .edit-review-form {
-	@include background-tile;
-
-	h1 {
-		margin-top: 0;
-	}
-
-	#rating-form {
-		margin-bottom: 15px;
-
-		label {
-			display: block;
-		}
-
-	}
-
-}
-
-
-/* Signup/Login form styles */
-
-.signup-form {
-	@include background-tile;
-
-	h2 {
-		margin-top: 0;
-	}
-
-}
-
-.login-form {
-	@include background-tile;
-
-	h2 {
-		margin-top: 0;
-	}
+.btn-info:hover{
+  background-color: #059 !important;
+  border-color: #059 !important;
+  font-color: #000000;
 
 }
