--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse" role="navigation" style="background-color: #047; border-color: #047;">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: #047; border-color: #047;">
 
   <div class="col-md-1">
     <%= image_tag("fapicon2.png")%>
